implementato splash screen

--- a/TrovaAuto/TrovaAuto/TrovaAuto.Android/TrovaAuto.Android.csproj
+++ b/TrovaAuto/TrovaAuto/TrovaAuto.Android/TrovaAuto.Android.csproj
@@ -94,9 +94,7 @@
     <AndroidResource Include="Resources\mipmap-xxxhdpi\icon.png" />
     <AndroidResource Include="Resources\mipmap-xxxhdpi\launcher_foreground.png" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Resources\drawable\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <ProjectReference Include="..\TrovaAuto\TrovaAuto.csproj">
       <Project>{EC26093D-A3A4-47B3-943A-39DF956E05CF}</Project>
@@ -105,6 +103,9 @@
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\xml\file_paths.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\splash_background.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
