addedd icons and bug fixed

--- a/TrovaAuto/TrovaAuto/TrovaAuto.Android/TrovaAuto.Android.csproj
+++ b/TrovaAuto/TrovaAuto/TrovaAuto.Android/TrovaAuto.Android.csproj
@@ -94,7 +94,9 @@
     <AndroidResource Include="Resources\mipmap-xxxhdpi\icon.png" />
     <AndroidResource Include="Resources\mipmap-xxxhdpi\launcher_foreground.png" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <AndroidResource Include="Resources\mipmap-hdpi\mainIcon.png" />
+  </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\TrovaAuto\TrovaAuto.csproj">
       <Project>{EC26093D-A3A4-47B3-943A-39DF956E05CF}</Project>
@@ -106,6 +108,18 @@
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\splash_background.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\mipmap-mdpi\mainIcon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\mipmap-xhdpi\mainIcon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\mipmap-xxhdpi\mainIcon.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\mipmap-xxxhdpi\mainIcon.png" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
