added donazione page

--- a/TrovaAuto/TrovaAuto/TrovaAuto/TrovaAuto.csproj
+++ b/TrovaAuto/TrovaAuto/TrovaAuto/TrovaAuto.csproj
@@ -48,6 +48,9 @@
     <EmbeddedResource Update="UI\CronologiaPage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Update="UI\DonazionePage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="UI\ImmaginePage.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
