Risolta anomalia notifiche
utilizzo di codice nativo per implementare la gestione delle notifiche utilizza l'interfaccia comune inotificacreator

--- a/TrovaAuto/TrovaAuto/TrovaAuto.Android/TrovaAuto.Android.csproj
+++ b/TrovaAuto/TrovaAuto/TrovaAuto.Android/TrovaAuto.Android.csproj
@@ -70,7 +70,9 @@
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AndroidNotificationManager.cs" />
     <Compile Include="MainActivity.cs" />
+    <Compile Include="NotificationReceiver.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
