--- a/TrovaAuto/TrovaAuto/TrovaAuto.Android/Properties/AndroidManifest.xml
+++ b/TrovaAuto/TrovaAuto/TrovaAuto.Android/Properties/AndroidManifest.xml
@@ -7,7 +7,7 @@
 		</provider>
 
     <uses-library android:name="org.apache.http.legacy" android:required="false"/>
-		<meta-data android:name="com.google.android.geo.API_KEY" android:value="AIzaSyBCiHJz8D8sutRCwu0CPUu3kFHNFKSUqQw" />
+		<meta-data android:name="com.google.android.maps.v2.API_KEY" android:value="AIzaSyBCiHJz8D8sutRCwu0CPUu3kFHNFKSUqQw" />
   </application>
   
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
